32- Internationalization of HellowWorld service

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency>
 
+<!--        Internationlization - i18N-->
 
 
 
