--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,11 @@
         </dependency>
 
 <!--        &lt;!&ndash;        Internationalization - i18N&ndash;&gt; //Not special dependency-->
-<!--        to support XML as data representation-->
-        <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-xml</artifactId>
-        </dependency>
+<!--        to support XML as data representation uncomment following deps-->
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.dataformat</groupId>-->
+<!--            <artifactId>jackson-dataformat-xml</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
