34/35/36- swagger intro/ explore-swagger/  monitoring api with help of sprint actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 logging.level.org.springframework = info
 spring.jackson.date-format=java.text.SimpleDateFormat
+management.endpoints.web.exposure.include=*
 
