--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,19 @@
 <!--            <groupId>com.fasterxml.jackson.dataformat</groupId>-->
 <!--            <artifactId>jackson-dataformat-xml</artifactId>-->
 <!--        </dependency>-->
+
+<!--        springdoc/swagger doc-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.5.9</version>
+        </dependency>
+<!--        The spring-boot-actuator module provides all of Spring Boot’s production-ready features.-->
+<!--        The recommended way to enable the features is to add a dependency on the spring-boot-starter-actuator ‘Starter’.-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+            </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
