37- visualizing apis using HAL

--- a/pom.xml
+++ b/pom.xml
@@ -30,31 +30,55 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
-<!--        HATEOAS &#45;&#45; Hypermedia as the engine of application state-->
-          <dependency>
+        <!--        HATEOAS &#45;&#45; Hypermedia as the engine of application state-->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency>
 
-<!--        &lt;!&ndash;        Internationalization - i18N&ndash;&gt; //Not special dependency-->
-<!--        to support XML as data representation uncomment following deps-->
-<!--        <dependency>-->
-<!--            <groupId>com.fasterxml.jackson.dataformat</groupId>-->
-<!--            <artifactId>jackson-dataformat-xml</artifactId>-->
-<!--        </dependency>-->
+        <!--        &lt;!&ndash;        Internationalization - i18N&ndash;&gt; //Not special dependency-->
+        <!--        to support XML as data representation uncomment following deps-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.fasterxml.jackson.dataformat</groupId>-->
+        <!--            <artifactId>jackson-dataformat-xml</artifactId>-->
+        <!--        </dependency>-->
 
-<!--        springdoc/swagger doc-->
+        <!--        springdoc/swagger doc-->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.5.9</version>
         </dependency>
-<!--        The spring-boot-actuator module provides all of Spring Boot’s production-ready features.-->
-<!--        The recommended way to enable the features is to add a dependency on the spring-boot-starter-actuator ‘Starter’.-->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-actuator</artifactId>
-            </dependency>
+        <!--        The spring-boot-actuator module provides all of Spring Boot’s production-ready features.-->
+        <!--        The recommended way to enable the features is to add a dependency on the spring-boot-starter-actuator ‘Starter’.-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+<!--        //Adding support for Hal explorer-->
+<!--        JSON Hypertext Application Language, or HAL, is a simple format that gives a consistent and easy way to hyperlink between resources in our API. Including HAL within our REST API makes it much more explorable to users as well as being essentially self-documenting.-->
+
+<!--        It works by returning data in JSON format which outlines relevant information about the API.-->
+
+<!--        The HAL model revolves around two simple concepts.-->
+
+<!--        Resources, which contain:-->
+
+<!--        Links to relevant URIs-->
+<!--        Embedded Resources-->
+<!--        State-->
+<!--        Links:-->
+
+<!--        A target URI-->
+<!--        A relation, or rel, to the link-->
+<!--        A few other optional properties to help with depreciation, content negotiation, etc-->
+<!--        The HAL browser was created by the same person who developed HAL and provides an in-browser GUI to traverse your REST API.-->
+
+<!--        We'll now build a simple REST API, plug in the HAL browser and explore the features.-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-hal-explorer</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
