--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ logging.level.org.springframework = info
 spring.jackson.date-format=java.text.SimpleDateFormat
 management.endpoints.web.exposure.include=*
 
+#spring.security.user.name=user
+#spring.security.user.password=password
