--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,10 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.5.9</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
         <!--        The spring-boot-actuator module provides all of Spring Boot’s production-ready features.-->
         <!--        The recommended way to enable the features is to add a dependency on the spring-boot-starter-actuator ‘Starter’.-->
         <dependency>
