45- Saving data in database and enable h2 in-memory database also enabled console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,19 @@ spring.jackson.date-format=java.text.SimpleDateFormat
 management.endpoints.web.exposure.include=*
 
 #spring.security.user.name=user
-#spring.security.user.password=password
+#spring.security.user.password=passw
+
+
+
+#configuring the data-source
+spring.datasource.url=jdbc:h2:mem:testdb
+#1) H2 database name is randomly generated each time you restart the server.
+# You can find the database name and URL from the console log.
+#
+#2) To use data.sql, you need to add this to application.properties -
+spring.jpa.defer-datasource-initialization=true
+
+# enable h2 console
+spring.h2.console.enabled=true
+#enable logs
+spring.jpa.show-sql=true
